--- a/templates/Klee.tmpl
+++ b/templates/Klee.tmpl
@@ -14,7 +14,10 @@
 <formoutput quote='£'>
 
 <html>
-<head><title><as-meta var=title></title></head>
+<head>
+  <title><as-meta var=title></title>
+  <include file=metadata.inc>
+</head>
 <body bgcolor='$$bg_color$$' text='$$text_color$$' link='$$link_color$$'
       vlink='$$vlink_color$$' alink='$$alink_color$$'
       £bg_image£>
