--- a/templates/basic.tmpl
+++ b/templates/basic.tmpl
@@ -3,7 +3,10 @@
 
 <formoutput quote='£'>
 <html>
-<head><title><as-meta var=title></title></head>
+<head>
+  <title><as-meta var=title></title>
+  <include file=metadata.inc>
+</head>
 <body bgcolor='$$bg_color$$' text='$$text_color$$' link='$$link_color$$'
       vlink='$$vlink_color$$' alink='$$alink_color$$' £bg_image£>
   <table border=0 cellpadding=5 cellspacing=0>
