--- a/templates/blob.tmpl
+++ b/templates/blob.tmpl
@@ -15,9 +15,9 @@
   <gtext bg=$$bg_color$$ fg=$$title_color$$
     scale=$$title_size$$
     £title_shadow£ $$title_font_style$$
-    nfont=$$title_font$$><as-meta var=title></gtext>
+    nfont='$$title_font$$'><as-meta var=title></gtext>
 </div>
-<table cellpadding=0 cellspacing=0 border=0>
+<table cellpadding=0 cellspacing=0 border=1>
   <tr>
     <td align=left bgcolor=$$text_bg_color$$ £text_bg_image£>
       <blob size=$$corner_1_size$$ corner=2 transparent=$$text_bg_color$$
