--- a/templates/border.tmpl
+++ b/templates/border.tmpl
@@ -20,7 +20,7 @@
       <gtext bg=$$bg_color$$ fg=$$title_color$$
         scale=$$title_size$$
 	£title_shadow£ $$title_font_style$$
-        nfont=$$title_font$$><as-meta var=title></gtext></td>
+        nfont='$$title_font$$'><as-meta var=title></gtext></td>
   </tr>
 
   <tr>
