--- a/templates/border2.tmpl
+++ b/templates/border2.tmpl
@@ -39,7 +39,7 @@
     <gtext bg=$$bg_color$$ fg=$$title_color$$
         scale=$$title_size$$
 	£title_shadow£ $$title_font_style$$
-        nfont=$$title_font$$><as-meta var=title></gtext></td>
+        nfont='$$title_font$$'><as-meta var=title></gtext></td>
   <td><img src=/internal-roxen-unit width=15 height=15 alt=""></td>
   <td bgcolor=$$text_bg_color$$ £text_bg_image£>
     <img src=/internal-roxen-unit width=15 height=15 alt=""></td>
