--- a/templates/dawn.tmpl
+++ b/templates/dawn.tmpl
@@ -10,34 +10,38 @@
 <body bgcolor='$$bg_color$$' text='$$text_color$$' link='$$link_color$$'
       vlink='$$vlink_color$$' alink='$$alink_color$$' £bg_image£>
   <table cellpadding=0 cellspacing=0 border=0>
+    <if not match='$$logo_position$$ is '>
+      <tr>
+        <td colspan=3 align=$$logo_position$$>
+          <img src=/logo.gif alt=""></if></td>
+      </tr>
+    </if>
     <tr>
-      <td>$$page_head_image$$</td>
+      <td colspan=3><include file=page_head_image.inc></td>
     </tr>
     <tr>
-      <td><img height=2 width=100% src=/internal-roxen-unit></td>
+      <td colspan=3><img height=2 width=100% src=/internal-roxen-unit></td>
     </tr>
     <tr>
-      <td align=center bgcolor=$$nav_bg_color$$>
+      <td colspan=3 align=center bgcolor=$$nav_bg_color$$>
         <include file='$$nav_name$$'>
       </td>
     </tr>
-    <tr><td>
-      <table border=0>
-        <tr>
-          <td width=10%>&nbsp;</td>
-          <td width=80% valign=top><tmplinsert tag=content></td>
-          <td width=10%>&nbsp;</td>
-        </tr>
-        <tr>
-          <td colspan=3 height=10></td>
-        </tr>
-        <tr>
-          <td>&nbsp;</td>
-          <td align=$$footer_align$$><insert file=/footer.html></td>
-          <td>&nbsp;</td>
-        </tr>
-      </table>
-    </td></tr>
+    <tr>
+      <td width=15 rowspan=3>
+        <img height=1 width=15 src=/internal-roxen-unit></td>
+      <td valign=top><tmplinsert tag=content></td>
+      <td width=15 rowspan=3>
+        <img height=1 width=15 src=/internal-roxen-unit></td>
+    </tr>
+    <tr>
+      <td height=20>
+        <img height=1 width=1 src=/internal-roxen-unit></td>
+    </tr>
+    <tr>
+      <td align=$$footer_align$$>
+        <insert file=/footer.html></td>
+    </tr>
   </table>
 </body>
 </html>
