--- a/templates/sand.tmpl
+++ b/templates/sand.tmpl
@@ -18,7 +18,7 @@
         <gtext bg=$$bg_color$$ fg=$$title_color$$
 	       scale=$$title_size$$
 	       £title_shadow£ $$title_font_style$$
-               nfont=$$title_font$$><as-meta var=title></gtext></td>
+               nfont='$$title_font$$'><as-meta var=title></gtext></td>
       <td><img src="/internal-roxen-unit" width=1 height=1></td>
     </tr>
     <tr><!--  bar  -->
@@ -28,38 +28,45 @@
         <img src="/internal-roxen-unit" width=1 height=1></td>
     </tr>
     <tr><!--  image  -->
-      <td>
-        <if not match='$$logo_position$$ is '>
-          <img src=/logo.gif alt=""></if><else>
-          <img src=/internal-roxen-unit width=1 height=1 alt=""></else></td>
-      <td colspan=3 valign=top bgcolor=$$text_bg_color$$ £text_bg_image£>
+      <if not match='$$logo_position$$ is '>
+        <td align=$$logo_position$$>
+          <img src=/logo.gif alt=""></td>
+      </if>
+      <else>
+        <td>
+          <img src=/internal-roxen-unit width=1 height=1 alt=""></td>
+      </else>
+      <td><img src="/internal-roxen-unit" width=1 height=1></td>
+      <td colspan=2 valign=top>
         <include file=page_head_image.inc></td>
     </tr>
     <tr>
       <td height=15 colspan=1>
         <img src="/internal-roxen-unit" width=1 height=1></td>
-      <td height=15 colspan=3 bgcolor=$$text_bg_color$$ £text_bg_image£>
+      <td height=15 colspan=3>
         <img src="/internal-roxen-unit" width=1 height=1></td>
     </tr>
     <tr><!--  Navigation/Content -->
-      <td rowspan=4 valign=top><img src="/internal-roxen-unit" height=80 width=1>
+      <td rowspan=4 valign=top>
+        <img src="/internal-roxen-unit" height=80 width=1>
         <include file='$$nav_name$$'></td>
-      <td rowspan=4 width=15 bgcolor=$$text_bg_color$$ £text_bg_image£>
+      <td rowspan=4 width=15>
         <img src="/internal-roxen-unit" width=15 height=1></td>
-      <td bgcolor=$$text_bg_color$$ £text_bg_image£><tmplinsert tag=content></td>
-      <td rowspan=4 width=15 bgcolor=$$text_bg_color$$ £text_bg_image£>
+      <td>
+        <tmplinsert tag=content></td>
+      <td rowspan=4 width=15>
         <img src="/internal-roxen-unit" width=15 height=1></td>
     </tr>
     <tr>
-      <td height=20 bgcolor=$$text_bg_color$$ £text_bg_image£>
-        <img src=/internal-roxen-unit width=1 height=1 alt=""></td> 
+      <td height=20>
+      <include file=padding.inc></td> 
     </tr>
     <tr>
-      <td align=$$footer_align$$ bgcolor=$$text_bg_color$$ £text_bg_image£>
+      <td align=$$footer_align$$>
         <insert file=/footer.html></td> 
     </tr>
     <tr>
-      <td height=15 bgcolor=$$text_bg_color$$ £text_bg_image£>
+      <td height=15>
         <img src=/internal-roxen-unit width=1 height=1 alt=""></td> 
     </tr>
   </table>
