bg_color is now a parameter to nav-templates.
Rev: templates/Klee.ntmpl:1.5
Rev: templates/Klee.tmpl:1.9
Rev: templates/basic.ntmpl:1.4
Rev: templates/basic.tmpl:1.8
Rev: templates/blob.tmpl:1.6
Rev: templates/blob2.tmpl:1.2
Rev: templates/border.tmpl:1.4
Rev: templates/border2.tmpl:1.4
Rev: templates/dawn.tmpl:1.7
Rev: templates/night.ntmpl:1.4
Rev: templates/night.tmpl:1.8
Rev: templates/sand.ntmpl:1.5
Rev: templates/sand.tmpl:1.8

--- a/templates/Klee.tmpl
+++ b/templates/Klee.tmpl
@@ -43,7 +43,7 @@
     <tr>
       <td rowspan=4 valign=top>
         <img width=1 height=1 src="/internal-roxen-unit" height=80 width=1>
-        <include file='$$nav_name$$'></td>
+        <include file='$$nav_name$$' bg_color=$$bg_color$$></td>
       <td rowspan=4 width=15 bgcolor=$$text_bg_color$$ £text_bg_image£>
         <img width=15 height=1 src="/internal-roxen-unit"></td>
       <td valign=top bgcolor=$$text_bg_color$$ £text_bg_image£>
