--- a/templates/blob.tmpl
+++ b/templates/blob.tmpl
@@ -54,7 +54,7 @@
         </tr>
         <tr>
           <td bgcolor=$$bg_color$$ £bg_image£><comment><--  Nav  --></comment>
-            <include file='$$nav_name$$'>
+            <include file='$$nav_name$$' bg_color=$$bg_color$$>
           </td>
         </tr>
         <tr>
