--- a/templates/night.tmpl
+++ b/templates/night.tmpl
@@ -26,7 +26,7 @@
         <if not match='$$logo_position$$ is '>
           <img src=/logo.gif alt=""><br><br></if><else>
           <img src=/internal-roxen-unit width=1 height=50></else>
-        <include file='$$nav_name$$'>
+        <include file='$$nav_name$$' bg_color=$$bg_color$$>
       </td>
       <td width=15 rowspan=3 bgcolor=$$text_bg_color$$ £text_bg_image£>
         <img src="/internal-roxen-unit" width=15 height=1></td>
