--- a/templates/sand.tmpl
+++ b/templates/sand.tmpl
@@ -49,7 +49,7 @@
     <tr><!--  Navigation/Content -->
       <td rowspan=4 valign=top>
         <img src="/internal-roxen-unit" height=80 width=1>
-        <include file='$$nav_name$$'></td>
+        <include file='$$nav_name$$' bg_color=$$bg_color$$></td>
       <td rowspan=4 width=15>
         <img src="/internal-roxen-unit" width=15 height=1></td>
       <td>
