--- a/templates/basic.tmpl
+++ b/templates/basic.tmpl
@@ -21,7 +21,7 @@
     </tr>
     <tr>
       <td rowspan=3 valign=top>
-        <include file='$$nav_name$$'>
+        <include file='$$nav_name$$' bg_color=$$bg_color$$>
       </td>
       <td valign=top bgcolor=$$text_bg_color$$ £text_bg_image£>
         <tmplinsert tag=content>
