--- a/templates/border.tmpl
+++ b/templates/border.tmpl
@@ -25,7 +25,7 @@
 
   <tr>
     <td valign=top>
-      <include file='$$nav_name$$'>
+      <include file='$$nav_name$$' bg_color=$$bg_color$$>
     </td>
   <td>
 
