--- a/templates/border2.tmpl
+++ b/templates/border2.tmpl
@@ -15,7 +15,7 @@
   <tr>
     <td valign=top>
       <img src=/internal-roxen-unit width=1 height=150 alt=""><br>
-      <include file='$$nav_name$$'>
+      <include file='$$nav_name$$' bg_color=$$bg_color$$>
     </td>
     <td>
 
