--- a/templates/dawn.tmpl
+++ b/templates/dawn.tmpl
@@ -24,7 +24,7 @@
     </tr>
     <tr>
       <td colspan=3 align=center bgcolor=$$nav_bg_color$$>
-        <include file='$$nav_name$$'>
+        <include file='$$nav_name$$' bg_color=$$bg_color$$>
       </td>
     </tr>
     <tr>
