Fixed a color bug.
Rev: templates/sand.tmpl:1.9

--- a/templates/sand.tmpl
+++ b/templates/sand.tmpl
@@ -1,4 +1,4 @@
-<include file=gtext_headers.inc bg_color=$$text_bg_color$$>
+<include file=gtext_headers.inc bg_color=$$bg_color$$>
 <include file=shadow.inc>
 <include file=bg_image.inc>
 <include file=supports.inc>
