--- a/templates/basic.tmpl
+++ b/templates/basic.tmpl
@@ -33,7 +33,7 @@
     </tr>
     <tr>
       <td align=$$footer_align$$ bgcolor=$$text_bg_color$$ £text_bg_image£>
-        <insert file=/footer.html></td> 
+        <insert file=/footer.html nocache></td> 
     </tr>
   </table>
 </body>
