Fixed a color bug.
Rev: templates/blob.tmpl:1.7

--- a/templates/blob.tmpl
+++ b/templates/blob.tmpl
@@ -31,7 +31,7 @@
     <td rowspan=4 bgcolor=$$text_bg_color$$ £text_bg_image£>
       <img src=/internal-roxen-unit width=15 height=1 alt=""></td>
     <td align=$$title_align$$ bgcolor=$$text_bg_color$$ £text_bg_image£>
-      <gtext bg=$$bg_color$$ fg=$$title_color$$
+      <gtext bg=$$text_bg_color$$ fg=$$title_color$$
         scale=$$title_size$$
         £title_shadow£ $$title_font_style$$
         nfont='$$title_font$$'><as-meta var=title></gtext></td>
