Made delete customer and delete user a bit less dangerous.
Rev: doc/TODO:1.7
Rev: doc/db.spec:1.39
Rev: html/mail/edit.html:1.6
Rev: html/templates/mail.tmpl:1.2
Rev: modules/admin/actions/20:Add_customer/page.html:1.14
Rev: modules/admin/tabs/10:Customer_configuration/page.html:1.9
Rev: modules/autoweb/autositefs.pike:1.31
Rev: modules/mail/clientlayer.pike:1.26
Rev: modules/mail/mailadmin.pike:1.10
Rev: modules/mail/mailtags.pike:1.23
Rev: templates/Klee.tmpl:1.10
Rev: templates/basic.tmpl:1.10
Rev: templates/blob.tmpl:1.8
Rev: templates/blob2.tmpl:1.3
Rev: templates/border.tmpl:1.5
Rev: templates/border2.tmpl:1.5
Rev: templates/dawn.tmpl:1.8
Rev: templates/img/roxenmail.gif:1.1
Rev: templates/night.tmpl:1.9
Rev: templates/sand.tmpl:1.10

--- a/html/templates/mail.tmpl
+++ b/html/templates/mail.tmpl
@@ -26,7 +26,7 @@
   </td>
 </tr>
 <tr bgcolor=#404085 width=100%>
-  <td colspan=3 bgcolor=#404085 width=100%>
+  <td nowrap colspan=3 bgcolor=#404085 width=100%>
   <nav href=./>List all mailboxes</nav>
   <nav href=edit.html>Compose a new message</nav>
   <nav href=new_mailbox.pike>Create mailbox</nav>
