--- a/templates/Klee.tmpl
+++ b/templates/Klee.tmpl
@@ -57,7 +57,7 @@
     </tr>
     <tr>
       <td bgcolor=$$text_bg_color$$ £text_bg_image£ align=$$footer_align$$>
-        <insert file=/footer.html></td>
+        <insert nocache file=/footer.html></td>
     </tr>
     <tr>
       <td bgcolor=$$text_bg_color$$ £text_bg_image£>
