--- a/templates/blob.tmpl
+++ b/templates/blob.tmpl
@@ -83,7 +83,7 @@
   </tr>
   <tr>
     <td bgcolor=$$text_bg_color$$ £text_bg_image£>
-      <insert file=/footer.html></td>
+      <insert nocache file=/footer.html></td>
   </tr>
   <tr>
     <td colspan=2 bgcolor=$$text_bg_color$$ £text_bg_image£ align=left>
