--- a/templates/blob2.tmpl
+++ b/templates/blob2.tmpl
@@ -72,7 +72,7 @@
       <comment><--  Content  --></comment>
       <tmplinsert tag=content><p>
       <br>
-      <insert file=/footer.html></td>
+      <insert nocache file=/footer.html></td>
     <td bgcolor=$$text_bg_color$$ £text_bg_image£>
       <img src=/internal-roxen-unit width=15 height=1 alt=""></td>
   </tr>
