--- a/templates/dawn.tmpl
+++ b/templates/dawn.tmpl
@@ -40,7 +40,7 @@
     </tr>
     <tr>
       <td align=$$footer_align$$>
-        <insert file=/footer.html></td>
+        <insert nocache file=/footer.html></td>
     </tr>
   </table>
 </body>
