--- a/templates/night.tmpl
+++ b/templates/night.tmpl
@@ -41,7 +41,7 @@
         <img src="/internal-roxen-unit" width=1 height=1></td>
     </tr>
     <tr bgcolor=$$text_bg_color$$ £text_bg_image£>
-      <td align=$$footer_align$$><insert file=/footer.html></td>
+      <td align=$$footer_align$$><insert nocache file=/footer.html></td>
     </tr>
   </table>
 
