--- a/templates/sand.tmpl
+++ b/templates/sand.tmpl
@@ -63,7 +63,7 @@
     </tr>
     <tr>
       <td align=$$footer_align$$>
-        <insert file=/footer.html></td> 
+        <insert nocache file=/footer.html></td> 
     </tr>
     <tr>
       <td height=15>
