--- a/templates/border.tmpl
+++ b/templates/border.tmpl
@@ -58,7 +58,7 @@
   </tr>
   <tr>
     <td bgcolor=$$text_bg_color$$ £text_bg_image£>
-      <insert file=/footer.html></td>
+      <insert nocache file=/footer.html></td>
   </tr>
   <tr>
     <td height=15 bgcolor=$$text_bg_color$$ £text_bg_image£ bottompadding>
