--- a/templates/border2.tmpl
+++ b/templates/border2.tmpl
@@ -85,7 +85,7 @@
 
  <tr>
    <td colspan=5 bgcolor=$$text_bg_color$$ £text_bg_image£>
-     <insert file=/footer.html></td>
+     <insert nocache file=/footer.html></td>
  </tr>
 
  <tr>
