--- a/html/templates/mail.tmpl
+++ b/html/templates/mail.tmpl
@@ -1,12 +1,14 @@
-<body _bgcolor=#ffffff bgcolor="#e6e6e6" text="#000000" link="#000088"
+<expire-time now>
+<body bgcolor="#e6e6e6" text="#000000" link="#000088"
       vlink="#000088" alink="#880000">
 <comment>
   rightmargin=0 hspace=0 marginheight=0 marginwidth=0
-      topmargin=0 vspace=0 margin=0 bottommargin=0 leftmargin=0
+  topmargin=0 vspace=0 margin=0 bottommargin=0 leftmargin=0
 </comment>
       
 <head>
   <title><tmplinsert tag=title></title>
+  <META HTTP-EQUIV="Expires" CONTENT="0">
 </head>
 
 <define container=nav>
